# modernapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  .secrets.baseline  README.md  docker-compose.yml  noxfile.py  pyproject.toml  tasks.py
deployment/api/: .env.example  Dockerfile  requirements.txt
deployment/nginx/: Dockerfile  nginx.conf
deployment/ngnix/: Dockerfile
mapi/: .env.example  Dockerfile  database.db  docker-compose.yaml  main.py  requirements.txt  worker.py
mapi/api/: security.py  user.py
mapi/api/routers/: admin.py  auth.py  heartbeat.py  status.py  user.py
mapi/core/: auth.py  event_handlers.py  password.py  security.py  status.py  user.py
mapi/database/: configuration.py  session.py
mapi/models/: heartbeat.py  models.py  user.py
mapi/schema/: hash.py  oa2.py  schemas.py  token.py
mapi/schemas/: token.py  user.py
mapi/settings/: lazylogger.py
tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_heartbeat.py  test_visitor.py
