[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Prayson W. Daniel <praysonpi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
redis = "^3.5.3"
celery = "^5.1.2"
python-multipart = "^0.0.5"
sqlmodel = "^0.0.4"
SQLAlchemy = "^1.4.23"
passlib = "^1.7.4"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
